tests/analyze/record-misspelled-field/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Field `namee` does not exist in record of type `{name: string, age: int}`.
> 1 | def me = {
      ^

